FIX Cart button out of screen
The button "Finalizar Compra" was hidden for users with small screens.

--- a/src/scss/pages/_general.scss
+++ b/src/scss/pages/_general.scss
@@ -3084,6 +3084,16 @@ ul.brands__list {
     width: 88%;
     margin: 0 auto 10px
 }
+@media screen and (max-width:480px) {
+    .cart .cart-mini__list {
+        height: calc(100vh - 360px);
+    }
+    .cart .cart-mini__shipping {
+        padding-top: 9px;
+        padding-bottom: 9px;
+        margin: 0 auto
+    }
+}
 
 .cart .cart-mini__shipping_title {
     font-size: 14px;
